--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "scripts": {
         "build:digitalocean": "npm install --production=false && npm run build && npm ci",
-        "start": "node app.js"
+        "start": "node app.js",
+        "build": "node app.js"
     }
 }
