following tutorial now

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "requires": true,
     "packages": {},
     "dependencies": {
-        "materialize-css": "^1.0.0-rc.2"
+        "express": "^4.18.2",
+        "materialize-css": "^1.0.0-rc.2",
+        "ws": "^8.13.0"
     },
     "scripts": {
         "build:digitalocean": "npm install --production=false && npm run build && npm ci",
-        "start": "node app.js",
-        "build": "node app.js"
+        "start": "node index.js",
+        "build": "node index.js"
     }
 }
