--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
     "name": "MRTNoteSplitter",
+    "version": "1.0.0",
+    "description": "",
     "lockfileVersion": 3,
     "requires": true,
     "packages": {},
+    "main": "index.js",
     "dependencies": {
         "express": "^4.18.2",
         "materialize-css": "^1.0.0-rc.2",
