--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-    "name": "MRTNoteSplitter",
-    "version": "1.0.0",
-    "description": "",
-    "lockfileVersion": 3,
-    "requires": true,
-    "packages": {},
-    "main": "index.js",
-    "dependencies": {
-        "express": "^4.18.2",
-        "materialize-css": "^1.0.0-rc.2",
-        "ws": "^8.13.0"
-    },
-    "scripts": {
-        "build:digitalocean": "npm install --production=false && npm run build && npm ci",
-        "start": "node index.js",
-        "build": "node index.js"
-    }
+  "name": "sample-websocket",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
+  }
 }
